bin_PROGRAMS = PeanoIntegerDiffusionThroughFaces2d_debug PeanoIntegerDiffusionThroughFaces2d PeanoIntegerDiffusionThroughFaces3d_debug PeanoIntegerDiffusionThroughFaces3d

PeanoIntegerDiffusionThroughFacesSources = \
  main.cpp \
  VTUCellDataPlotter.cpp \
  PeanoFormatCellDataPlotter.cpp \
  CompositeMapping.cpp \
  MyMapping.cpp \
  MyObserver.cpp

PeanoIntegerDiffusionThroughFaces2d_debug_CXXFLAGS  = $(PEANO_CXXFLAGS) -I$(top_builddir)/src -DPeanoDebug=4 -DDimensions=2
PeanoIntegerDiffusionThroughFaces2d_debug_LDADD     = $(top_builddir)/src/libPeano4Core2d_debug.a $(top_builddir)/src/libTarch_debug.a
PeanoIntegerDiffusionThroughFaces2d_debug_LDFLAGS   = $(PEANO_LDFLAGS) -L$(top_builddir)/src
PeanoIntegerDiffusionThroughFaces2d_debug_SOURCES   = $(PeanoIntegerDiffusionThroughFacesSources)

PeanoIntegerDiffusionThroughFaces2d_CXXFLAGS  = $(PEANO_CXXFLAGS) -I$(top_builddir)/src  -DPeanoDebug=1 -DDimensions=2
PeanoIntegerDiffusionThroughFaces2d_LDADD     = $(top_builddir)/src/libPeano4Core2d.a $(top_builddir)/src/libTarch.a
PeanoIntegerDiffusionThroughFaces2d_LDFLAGS   = $(PEANO_LDFLAGS) -L$(top_builddir)/src
PeanoIntegerDiffusionThroughFaces2d_SOURCES   = $(PeanoIntegerDiffusionThroughFacesSources)

PeanoIntegerDiffusionThroughFaces3d_debug_CXXFLAGS  = $(PEANO_CXXFLAGS) -I$(top_builddir)/src -DPeanoDebug=4 -DDimensions=3
PeanoIntegerDiffusionThroughFaces3d_debug_LDADD     = $(top_builddir)/src/libPeano4Core3d_debug.a $(top_builddir)/src/libTarch_debug.a
PeanoIntegerDiffusionThroughFaces3d_debug_LDFLAGS   = $(PEANO_LDFLAGS) -L$(top_builddir)/src
PeanoIntegerDiffusionThroughFaces3d_debug_SOURCES   = $(PeanoIntegerDiffusionThroughFacesSources)

PeanoIntegerDiffusionThroughFaces3d_CXXFLAGS  = $(PEANO_CXXFLAGS) -I$(top_builddir)/src  -DPeanoDebug=1 -DDimensions=3
PeanoIntegerDiffusionThroughFaces3d_LDADD     = $(top_builddir)/src/libPeano4Core3d.a $(top_builddir)/src/libTarch.a
PeanoIntegerDiffusionThroughFaces3d_LDFLAGS   = $(PEANO_LDFLAGS) -L$(top_builddir)/src
PeanoIntegerDiffusionThroughFaces3d_SOURCES   = $(PeanoIntegerDiffusionThroughFacesSources)
